--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -24,11 +24,8 @@
                 app:expandedTitleGravity="top"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
                     <LinearLayout
+                        android:id="@+id/address_linear_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="16dp"
@@ -48,6 +45,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
+
                             <TextView
                                 android:id="@+id/addressLineTop"
                                 android:layout_width="wrap_content"
@@ -64,8 +62,6 @@
                         </LinearLayout>
 
                     </LinearLayout>
-
-                </LinearLayout>
 
                 <android.support.v7.widget.Toolbar
                     android:layout_width="match_parent"
